# IR_PJT

./: .env.example  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-train.txt  requirements-vllm.txt
config/: default.yaml
docs/: OPERATION.md  PLAN_UP.md  PLAN_UP_Stage2.md  RAG_Pipeline_Tech_Stack.md  local_LLM.md
docs/user_define_data/: doc_metadata.jsonl  reranker_triplets.jsonl  science_synonyms.txt  sft_data.jsonl  sft_doc_qa.ckpt.json  user_dict.txt
scripts/: build_doc_metadata.py  build_reranker_triplets.py  build_reranker_triplets_backup.py  build_sft_data.py  build_sft_from_docs.py  build_sft_summary.py  build_synonyms.py  build_user_dict.py  compare_submissions.py  export_submission.py  index_es.py  index_qdrant.py  postprocess_submission.py  ragas_eval.py  run_b3_chain.sh  run_competition_map.py  run_f2_chain.sh  run_retrieval_eval.py  serve_vllm.py  smoke_e2e.py  train_reranker.py  train_sft.py  validate_submission.py  verify_indices.py
src/ir_rag/: __init__.py  competition_metrics.py  config.py  embeddings.py  es_util.py  eval_map.py  generator.py  io_util.py  listwise_reranker.py  llm_openai_chat.py  preprocess.py  pseudo_label.py  query_rewrite.py  reranker.py  retrieval.py  submission.py  vram.py
