[project]
name = "ir-rag"
version = "0.1.0"
description = "Science QA RAG competition pipeline (indexing, retrieval, eval)"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "Apache-2.0" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
